added the interface layer for the cache